Fix bug on letter case for edit profile

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
           <i class="fas fa-cogs"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/edit_Profile_details">Edit Profile</a>
+          <a class="dropdown-item" href="/editprofiledetails">Edit Profile</a>
           <a class="dropdown-item" href="/showuploadedfiles">Show Uploaded Images</a>
           <a class="dropdown-item" href="/changepassword">Change Password</a>
           <a class="dropdown-item" href="/stripecheckout">Subscribe</a>
