--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
       {% endif %}
         <h3 class="card-headings">1. Edit Your Profile</h3>
         <p class="card-text">The first step to success. Please provide key information about you and your business which will be used within your quotations. We advise you to complete this stage first and ensure all the information is kept up to date.</p>
-        <a class="stretched-link" href="/edit_Profile_details"></a>
+        <a class="stretched-link" href="/editprofiledetails"></a>
       </div>
 
     </div>
