--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,10 @@
             <a class="dropdown-item" href="/listquotearchive">Previous Quotes</a>
           {% endif %}
           <div class="dropdown-divider"></div>
+          {% if request.user|has_group:"WESTCHEM" %}
+            <a class="dropdown-item" href="/customerorder"><i>New Customer Order</i></a>
+            <div class="dropdown-divider"></div>
+          {% endif %}
           <a class="dropdown-item" href="/logout">Logout</a>
         </div>
       </span>
