Customer Order Form and Report implemented 2

--- a/templates/pdf/user_test2/customerorder_for_pdf.html
+++ b/templates/pdf/user_test2/customerorder_for_pdf.html
@@ -95,7 +95,7 @@
         <table>
             <tr>
                 <td><div class='header'>ORDER REPORT</div></td>
-                <td align="right">&nbsp;</td>
+                <td align="right"><img src="{{frecords.0.document.url}}" width="350px"></td>
             </tr>
             <tr>    
                 <td colspan="2">
