Fixed layout change to CustomerOrderForm.html

--- a/templates/westchem/orderforms/CustomerOrderForm.html
+++ b/templates/westchem/orderforms/CustomerOrderForm.html
@@ -11,8 +11,8 @@
     <form method="post">
     
     {% csrf_token %}
-    <table width="45%"><tr>
-    <td width="47%">Product</td> <td width="13%">Size</td> <td width="14%">Price £</td> <td width="13%">Stock</td> <td width="13%" align="right">Ord.Qty</td>
+    <table width="450px"><tr>
+    <td width="170px">Product</td> <td width="70px">Size</td> <td width="60px">Price £</td> <td width="60px">Stock</td> <td width="70px">Ord.Qty</td>
     </tr>
     </table>
     {% for frecord in formset %}
