--- a/templates/quotepad/productprice_form.html
+++ b/templates/quotepad/productprice_form.html
@@ -33,6 +33,12 @@
             {{ form.product_image.label}}<br>
             {{ form.product_image}}<br>
         </div>
+
+        <div class="form-group">
+            {{ form.guarantee.label}}<br>
+            {{ form.guarantee}}<br>
+        </div>
+        
         <button class="btn btn-primary" type="submit">Save</button>
         <a href="/productpricelist/" class="btn btn-secondary">Cancel</a>
     </form>
