--- a/static/css/main.css
+++ b/static/css/main.css
@@ -384,3 +384,78 @@ a:hover {
     height: 20px;
     width: 20px;
     }
+
+  /* CSS for Hitachi   */
+  #products {
+    width: 100%;
+  }
+  #products td {
+    border-collapse: collapse;
+    padding: 10px;
+    width: 25%;
+  }
+  
+  #enabled {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    border-collapse: collapse;
+    color: #4D4D4D;
+    width: 100%;
+  }
+
+  #enabled td{
+    border: 1px solid #D9D9D9;
+    padding: 5px;
+    text-align: center;
+  }
+
+  #enabled tr:nth-child(even){background-color: #D9D9D9;}
+
+  #enabled tr:hover {background-color: #B3B3B3;}
+
+  #enabled th {
+    border: 1px solid #D9D9D9;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+    text-align: center;
+    background-color: #B1000E;
+    color: white;
+  }
+
+  #disabled {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    border-collapse: collapse;
+    color: #4D4D4D;
+    width: 100%;
+    opacity: 0.2;
+  }
+
+  #disabled td{
+    border: 1px solid #D9D9D9;
+    padding: 5px;
+    text-align: center;
+  }
+
+  #disabled tr:nth-child(even){background-color: #D9D9D9;}
+
+  #disabled th {
+    border: 1px solid #D9D9D9;
+    padding-top: 8px;
+    padding-bottom:8px;
+    padding-left: 8px;
+    padding-right: 8px;
+    text-align: center;
+    background-color: #B1000E;
+    color: white;
+  }
+
+  #value {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    color: #4D4D4D;
+  }
+
+  
