--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
           <a class="dropdown-item" href="/showuploadedfiles">Show Uploaded Images</a>
           <!-- <a class="dropdown-item" href="/financeform">Finance Options</a> -->
           <a class="dropdown-item" href="/changepassword">Change Password</a>
-          <a class="dropdown-item" href="/stripecheckout">Subscribe</a>
+          <!-- <a class="dropdown-item" href="/stripecheckout">Subscribe</a> -->
           {% if request.session.created_quote %}
             <div class="dropdown-divider"></div>
             {% if request.user|has_group:"WESTCHEM" %}
