--- a/templates/yourheat/orderforms/boilerform.html
+++ b/templates/yourheat/orderforms/boilerform.html
@@ -15,22 +15,22 @@
         <h3>PROPERTY DETAILS</h3>
     {% endif %}
     {% if wizard.steps.step1 == 3 %}
-        <h3>CURRENT INSTALLATION DETAILS</h3>
+        <h3>CURRENT SYSTEM CONFIGUATION</h3>
     {% endif %}
     {% if wizard.steps.step1 == 4 %}
-        <h3>ITEMS TO BE REMOVED</h3>
+        <h3>DECOMMISSION AND REMOVAL</h3>
     {% endif %}
     {% if wizard.steps.step1 == 5 %}
-        <h3>NEW EQUIPMENT DETAILS</h3>
+        <h3>NEW SYSTEM CONFIGURATION</h3>
     {% endif %}
     {% if wizard.steps.step1 == 6 %}
-        <h3>COMMISSIONING DETAILS</h3>
+        <h3>INSTALLATION REQUIREMENTS</h3>
     {% endif %}
     {% if wizard.steps.step1 == 7 %}
-        <h3>NEW INSTALLATION DETAILS</h3>
+        <h3>NEW INSTALLATION MATERIALS</h3>
     {% endif %}
     {% if wizard.steps.step1 == 8 %}
-        <h3>RADIATOR DETAILS</h3>
+        <h3>RADIATOR REQUIREMENTS</h3>
     {% endif %}
     {% if wizard.steps.step1 == 9 %}
         <h3>WORKLOAD DETAILS</h3>
@@ -46,27 +46,43 @@
         {% endfor %}
     {% else %}
             {% for field in wizard.form %} 
-                {% if forloop.counter == 1 or forloop.counter == 3 or forloop.counter == 5 or forloop.counter == 7 or forloop.counter == 9  or forloop.counter == 11 or forloop.counter == 13 %}
+                {% if forloop.counter == 1 or forloop.counter == 3 or forloop.counter == 5 or forloop.counter == 7 or forloop.counter == 9  or forloop.counter == 11 or forloop.counter == 13 or forloop.counter == 15 or forloop.counter == 17 %}
+                {% if field.label != 'Cupboard height' and field.label != "Cupboard width" and field.label != "Cupboard depth" %}
                 <div class = "row">
                 {% endif %}
+                {% endif %}
+                {% if field.label == 'Cupboard height' or field.label == "Cupboard width" or field.label == "Cupboard depth" %}
+                    <div class = "col-2">    
+                {% else %}
                     <div class = "col-6">
-                    {% if field.field.widget.input_type == "text" or field.field.widget.input_type == "email" %}           
+                {% endif %}
+                
+                    {% if field.field.widget.input_type == "text" or field.field.widget.input_type == "email" %} 
+
                         <div class="form-group">
                             <label>{{ field.label }}</label>{% if field.field.required %} *{% endif %}<br>
                             {{ field }}
         
                         </div>
                     {% else %}
+                    
                         <div class="form-group">
+                            
                                 <label>{{ field.label }}</label>{% if field.field.required %} *{% endif %}
                                 {% if field.label == "Product choice" %}
-                                <button type="button" class="btn" data-toggle="popover" data-trigger="focus" title="Product Choice" data-content="This is where you select the product that has to be included on the quote"><i class="fas fa-info-circle"></i></button>
+                                    <button type="button" class="btn" data-toggle="popover" data-trigger="focus" title="Product Choice" data-content="This is where you select the product that is to be included on the quote"><i class="fas fa-info-circle"></i></button>
+                                {% endif %}
+                                {% if field.label == "Alt product choice" %}
+                                    <button type="button" class="btn" data-toggle="popover" data-trigger="focus" title="Product Choice" data-content="This is where you select the alternative product that is to be included on the quote"><i class="fas fa-info-circle"></i></button>
                                 {% endif %}
                                 {% if field.label == "Boiler manufacturer" %}
-                                <button type="button" class="btn" data-toggle="popover" data-trigger="focus" title="Boiler manufacturer" data-content="Filter the list of products by selecting the appropriate manufacturer"><i class="fas fa-info-circle"></i></button>
+                                    <button type="button" class="btn" data-toggle="popover" data-trigger="focus" title="Boiler manufacturer" data-content="Filter the list of products by selecting the appropriate manufacturer"><i class="fas fa-info-circle"></i></button>
+                                {% endif %}
+                                {% if field.label == "Alt boiler manufacturer" %}
+                                    <button type="button" class="btn" data-toggle="popover" data-trigger="focus" title="Boiler manufacturer" data-content="Filter the list of products by selecting the appropriate alternative manufacturer"><i class="fas fa-info-circle"></i></button>
                                 {% endif %}
                                 {% if field.label == "Estimated duration" %}
-                                <button type="button" class="btn" data-toggle="popover" data-trigger="focus" title="Estimated duration" data-content="The numbers of days entered here will be multiplied by the Daily Work Rate specified in your profile to calculate the Labour cost of the work."><i class="fas fa-info-circle"></i></button>
+                                    <button type="button" class="btn" data-toggle="popover" data-trigger="focus" title="Estimated duration" data-content="The numbers of days entered here will be multiplied by the Daily Work Rate specified in your profile to calculate the Labour cost of the work."><i class="fas fa-info-circle"></i></button>
                                 {% endif %}
                                 <br>
                                 {{ field }}
@@ -74,8 +90,11 @@
                     {% endif %}
                     </div>  <!-- col-6-->
                 <!-- <span class="message">{{ field.errors }}</span> -->
-                {% if forloop.counter == 2 or forloop.counter == 4 or forloop.counter == 6 or forloop.counter == 8 or forloop.counter == 10 or forloop.counter == 12 or forloop.counter == 14 %}
+
+                {% if forloop.counter == 2 or forloop.counter == 4 or forloop.counter == 6 or forloop.counter == 8 or forloop.counter == 10 or forloop.counter == 12 or forloop.counter == 14 or forloop.counter == 16 or forloop.counter == 18 %}
+                {% if field.label != 'Cupboard height' and field.label != "Cupboard width"  %}
                     </div>  <!-- row-->
+                {% endif %}    
                 {% else %}
                     
                     {% if forloop.counter == form.fields|length %}
