--- a/templates/base.html
+++ b/templates/base.html
@@ -64,8 +64,8 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/editprofiledetails">Edit Profile</a>
-          <a class="dropdown-item" href="/showuploadedfiles">Show Uploaded Images</a>
-          <!-- <a class="dropdown-item" href="/financeform">Finance Options</a> -->
+          <a class="dropdown-item" href="/showuploadedfiles">Show Images</a>
+          <a class="dropdown-item" href="/productcomponentlist">Components</a>
           <a class="dropdown-item" href="/changepassword">Change Password</a>
           <!-- <a class="dropdown-item" href="/stripecheckout">Subscribe</a> -->
           {% if request.session.created_quote %}
