--- a/templates/yourheat/orderforms/financeform.html
+++ b/templates/yourheat/orderforms/financeform.html
@@ -30,7 +30,17 @@
                 <div class="form-group">
                     <label>{{ wizard.form.deposit_amount.label }} *</label>
                     {{ wizard.form.deposit_amount }}
+                    <!-- Hidden fields to capture calculations from the Hitachi Finance JS -->
+                    {{ wizard.form.ib60_loan_amount.as_hidden }}
+                    {{ wizard.form.ib60_monthly_payment.as_hidden }}
+                    {{ wizard.form.ib60_total_payable.as_hidden }}
+                    {{ wizard.form.ib120_loan_amount.as_hidden }}
+                    {{ wizard.form.ib120_monthly_payment.as_hidden }}
+                    {{ wizard.form.ib120_total_payable.as_hidden }}
+                    {{ wizard.form.interest_free_12m_loan_amount.as_hidden }}
+                    {{ wizard.form.interest_free_12m_monthly_payment.as_hidden }}
                 </div>
+                
             </div>    
         </div>    
     </div>
@@ -132,6 +142,7 @@ var defaultPrice = 500;
         var price;
         var defaultDeposit;
         var deposit;
+        var interestfreemonthlyPayment;
 
         console.log("Doing it");
         
@@ -169,6 +180,13 @@ var defaultPrice = 500;
           var loanAmount = price - deposit;
           
           tdContainer = document.createElement("td");
+
+          // Added By GL
+          interestfreemonthlyPayment = Math.floor(((loanAmount / 12)) * 100) / 100;
+          //console.log(interestfreemonthlyPayment);
+          document.getElementById("id_9-interest_free_12m_monthly_payment").value = interestfreemonthlyPayment.toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$&,');
+          document.getElementById("id_9-interest_free_12m_loan_amount").value = loanAmount.toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$&,');
+          // -----------
           
           if (product.rpm == 0) {
             var monthlyPayment = Math.floor(((loanAmount / product.term)) * 100) / 100;
@@ -222,6 +240,12 @@ var defaultPrice = 500;
         var span = document.createElement("span");
         span.id = "value";
         text = document.createTextNode("£" + result.loanAmount.toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$&,'));
+        if(result.term == '60') {
+          document.getElementById("id_9-ib60_loan_amount").value = result.loanAmount.toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$&,');
+        }
+        if(result.term == '120') {
+          document.getElementById("id_9-ib120_loan_amount").value = result.loanAmount.toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$&,');
+        }
         span.appendChild(text);
         tdProducts.appendChild(span);
         var br = document.createElement("br");
@@ -250,6 +274,12 @@ var defaultPrice = 500;
         span = document.createElement("span");
         span.id = "value";
         text = document.createTextNode("£" + result.monthlyPayment.toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$&,'));
+        if(result.term == '60') {
+          document.getElementById("id_9-ib60_monthly_payment").value = result.monthlyPayment.toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$&,');
+        }
+        if(result.term == '120') {
+          document.getElementById("id_9-ib120_monthly_payment").value = result.monthlyPayment.toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$&,');
+        }
         span.appendChild(text);
         tdProducts.appendChild(span);
         br = document.createElement("br");
@@ -290,6 +320,12 @@ var defaultPrice = 500;
         trProducts = document.createElement("tr");
         tdProducts = document.createElement("td");
         text = document.createTextNode("Total amount payable (Incl. Deposit): £" + result.totalRepayable.toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$&,'));
+        if(result.term == '60') {
+          document.getElementById("id_9-ib60_total_payable").value = result.totalRepayable.toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$&,');
+        }
+        if(result.term == '120') {
+          document.getElementById("id_9-ib120_total_payable").value = result.totalRepayable.toFixed(2).replace(/\d(?=(\d{3})+\.)/g, '$&,');
+        }
         tdProducts.appendChild(text);
         trProducts.appendChild(tdProducts);
         table.appendChild(trProducts);
