--- a/static/css/yh.css
+++ b/static/css/yh.css
@@ -411,3 +411,10 @@ div.break {
     width:100%;
     border: 1px solid black;
 }
+
+table.radiator-table {
+    border-spacing:0;
+    padding:10px;
+}
+
+   
