YH updates for Optional Extras ( model, forms and pdf)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -205,6 +205,11 @@ a:hover {
   margin:0px;
 }
 
+.form-extras-group {
+  background-color: rgb(228, 228, 228);
+  visibility: hidden;
+}
+
 
 .input-disabled {
   text-align: left;
