--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/productcomponentlist">Components<span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/optionalextralist">Optional Extras<span class="sr-only">(current)</span></a>
+        </li>
         {% if request.session.created_quote %}
           {% if request.user|has_group:"WESTCHEM" %}
             <li class="nav-item">
