--- a/templates/pdf/user_yourheatx/quote_for_pdf.html
+++ b/templates/pdf/user_yourheatx/quote_for_pdf.html
@@ -648,6 +648,51 @@
                                     <td>{{form_data.7.location_3}}</td><td>{{form_data.7.radiator_height_3}}</td><td>{{form_data.7.radiator_width_3}}</td><td>{{form_data.7.radiator_type_3}}</td>
                                     </tr>
                                 {% endif %}
+                                {% if form_data.7.location_4 %}
+                                    <tr>
+                                    <td>{{form_data.7.location_4}}</td><td>{{form_data.7.radiator_height_4}}</td><td>{{form_data.7.radiator_width_4}}</td><td>{{form_data.7.radiator_type_4}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.location_5 %}
+                                    <tr>
+                                    <td>{{form_data.7.location_5}}</td><td>{{form_data.7.radiator_height_5}}</td><td>{{form_data.7.radiator_width_5}}</td><td>{{form_data.7.radiator_type_5}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.location_6 %}
+                                    <tr>
+                                    <td>{{form_data.7.location_6}}</td><td>{{form_data.7.radiator_height_6}}</td><td>{{form_data.7.radiator_width_6}}</td><td>{{form_data.7.radiator_type_6}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.location_7 %}
+                                    <tr>
+                                    <td>{{form_data.7.location_7}}</td><td>{{form_data.7.radiator_height_7}}</td><td>{{form_data.7.radiator_width_7}}</td><td>{{form_data.7.radiator_type_7}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.location_8 %}
+                                    <tr>
+                                    <td>{{form_data.7.location_8}}</td><td>{{form_data.7.radiator_height_8}}</td><td>{{form_data.7.radiator_width_8}}</td><td>{{form_data.7.radiator_type_8}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.location_9 %}
+                                    <tr>
+                                    <td>{{form_data.7.location_9}}</td><td>{{form_data.7.radiator_height_9}}</td><td>{{form_data.7.radiator_width_9}}</td><td>{{form_data.7.radiator_type_9}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.location_10 %}
+                                    <tr>
+                                    <td>{{form_data.7.location_10}}</td><td>{{form_data.7.radiator_height_10}}</td><td>{{form_data.7.radiator_width_10}}</td><td>{{form_data.7.radiator_type_10}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.location_11 %}
+                                    <tr>
+                                    <td>{{form_data.7.location_11}}</td><td>{{form_data.7.radiator_height_11}}</td><td>{{form_data.7.radiator_width_11}}</td><td>{{form_data.7.radiator_type_11}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.location_12 %}
+                                    <tr>
+                                    <td>{{form_data.7.location_12}}</td><td>{{form_data.7.radiator_height_12}}</td><td>{{form_data.7.radiator_width_12}}</td><td>{{form_data.7.radiator_type_12}}</td>
+                                    </tr>
+                                {% endif %}
                                 </tr>
                             </table>
                         {% endif %}
@@ -670,6 +715,51 @@
                                 {% if form_data.7.radiator_valve_size_3 %}
                                     <tr>
                                     <td>{{form_data.7.radiator_valve_size_3}}</td><td>{{form_data.7.radiator_valve_type_3}}</td><td>{{form_data.7.radiator_valve_quantity_3}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.radiator_valve_size_4 %}
+                                    <tr>
+                                    <td>{{form_data.7.radiator_valve_size_4}}</td><td>{{form_data.7.radiator_valve_type_4}}</td><td>{{form_data.7.radiator_valve_quantity_4}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.radiator_valve_size_5 %}
+                                    <tr>
+                                    <td>{{form_data.7.radiator_valve_size_5}}</td><td>{{form_data.7.radiator_valve_type_5}}</td><td>{{form_data.7.radiator_valve_quantity_5}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.radiator_valve_size_6 %}
+                                    <tr>
+                                    <td>{{form_data.7.radiator_valve_size_6}}</td><td>{{form_data.7.radiator_valve_type_6}}</td><td>{{form_data.7.radiator_valve_quantity_6}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.radiator_valve_size_7 %}
+                                    <tr>
+                                    <td>{{form_data.7.radiator_valve_size_7}}</td><td>{{form_data.7.radiator_valve_type_7}}</td><td>{{form_data.7.radiator_valve_quantity_7}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.radiator_valve_size_8 %}
+                                    <tr>
+                                    <td>{{form_data.7.radiator_valve_size_8}}</td><td>{{form_data.7.radiator_valve_type_8}}</td><td>{{form_data.7.radiator_valve_quantity_8}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.radiator_valve_size_9 %}
+                                    <tr>
+                                    <td>{{form_data.7.radiator_valve_size_9}}</td><td>{{form_data.7.radiator_valve_type_9}}</td><td>{{form_data.7.radiator_valve_quantity_9}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.radiator_valve_size_10 %}
+                                    <tr>
+                                    <td>{{form_data.7.radiator_valve_size_10}}</td><td>{{form_data.7.radiator_valve_type_10}}</td><td>{{form_data.7.radiator_valve_quantity_10}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.radiator_valve_size_11 %}
+                                    <tr>
+                                    <td>{{form_data.7.radiator_valve_size_11}}</td><td>{{form_data.7.radiator_valve_type_11}}</td><td>{{form_data.7.radiator_valve_quantity_11}}</td>
+                                    </tr>
+                                {% endif %}
+                                {% if form_data.7.radiator_valve_size_12 %}
+                                    <tr>
+                                    <td>{{form_data.7.radiator_valve_size_12}}</td><td>{{form_data.7.radiator_valve_type_12}}</td><td>{{form_data.7.radiator_valve_quantity_12}}</td>
                                     </tr>
                                 {% endif %}
                                 </tr>
@@ -730,19 +820,69 @@
             <tr>
                 <td class="tech-attrib" colspan="2">OPTIONAL EXTRAS</td>
             </tr>
-            <tr colspan="2">
-                <td>
+            {% if form_data.8.optional_extras %}
+            <tr>
+                <td colspan="2">
                     <table class="optional-extras">
                         <tr>
-                            <th width="50%">Product Description</th>
-                            <th width="25%">Quantity</th>
-                            <th width="25%">Price (Inc VAT)</th>
+                            <td width="60%">Product Description</th>
+                            <td width="20%">Qty</th>
+                            <td width="20%">Price (Inc VAT)</th>
                         </tr>
+                        {% if form_data.8.extra_1 %}
+                            <tr>
+                                <td>{{form_data.8.extra_1}}</td><td>{{form_data.8.extra_qty_1}}</td><td>£{{optional_extra_extended_prices.0}}</td>
+                            </tr>
+                        {% endif %}
+                        {% if form_data.8.extra_2 %}
+                            <tr>
+                                <td>{{form_data.8.extra_2}}</td><td>{{form_data.8.extra_qty_2}}</td><td>£{{optional_extra_extended_prices.1}}</td>
+                            </tr>
+                        {% endif %}
+                        {% if form_data.8.extra_3 %}
+                            <tr>
+                                <td>{{form_data.8.extra_3}}</td><td>{{form_data.8.extra_qty_3}}</td><td>£{{optional_extra_extended_prices.2}}</td>
+                            </tr>
+                        {% endif %}
+                        {% if form_data.8.extra_4 %}
+                            <tr>
+                                <td>{{form_data.8.extra_4}}</td><td>{{form_data.8.extra_qty_4}}</td><td>£{{optional_extra_extended_prices.3}}</td>
+                            </tr>
+                        {% endif %}
+                        {% if form_data.8.extra_5 %}
+                            <tr>
+                                <td>{{form_data.8.extra_5}}</td><td>{{form_data.8.extra_qty_5}}</td><td>£{{optional_extra_extended_prices.4}}</td>
+                            </tr>
+                        {% endif %}
+                        {% if form_data.8.extra_6 %}
+                            <tr>
+                                <td>{{form_data.8.extra_6}}</td><td>{{form_data.8.extra_qty_6}}</td><td>£{{optional_extra_extended_prices.5}}</td>
+                            </tr>
+                        {% endif %}
+                        {% if form_data.8.extra_7 %}
+                            <tr>
+                                <td>{{form_data.8.extra_7}}</td><td>{{form_data.8.extra_qty_7}}</td><td>£{{optional_extra_extended_prices.6}}</td>
+                            </tr>
+                        {% endif %}
+                        {% if form_data.8.extra_8 %}
+                            <tr>
+                                <td>{{form_data.8.extra_8}}</td><td>{{form_data.8.extra_qty_8}}</td><td>£{{optional_extra_extended_prices.7}}</td>
+                            </tr>
+                        {% endif %}
+                        {% if form_data.8.extra_9 %}
+                            <tr>
+                                <td>{{form_data.8.extra_9}}</td><td>{{form_data.8.extra_qty_9}}</td><td>£{{optional_extra_extended_prices.8}}</td>
+                            </tr>
+                        {% endif %}
+                        {% if form_data.8.extra_10 %}
+                            <tr>
+                                <td>{{form_data.8.extra_10}}</td><td>{{form_data.8.extra_qty_10}}</td><td>£{{optional_extra_extended_prices.9}}</td>
+                            </tr>
+                        {% endif %}
                     </table>
                 </td>
             </tr>
-
-
+            {% endif %}
         </table>
 
     </div>
