YH minor change to layout

--- a/templates/quotepad/optionalextra_list.html
+++ b/templates/quotepad/optionalextra_list.html
@@ -27,7 +27,7 @@
     </div>
 
     {% for extra in optional_extra_by_user %}
-    <div class="row">
+    <div class="row opt_extra-row">
         <div class="col-6">
             {{ extra.product_name }}     
         </div>
