--- a/static/css/main.css
+++ b/static/css/main.css
@@ -174,6 +174,10 @@ a:hover {
   .gas-flue-row {
     padding:1px; 
   }
+
+  .opt_extra-row {
+    padding:1px; 
+  }
   
   .edit-product-container {
     margin-top: 20px;
