--- a/templates/show_uploaded_files.html
+++ b/templates/show_uploaded_files.html
@@ -11,7 +11,7 @@
         <hr>
         <img src="{{frecord.document.url}}"  height="100" style="border:1px solid grey" ><br>
         Description: {{frecord.description}}   | uploaded on: {{frecord.uploaded_at}}<br>
-        <!-- <p>Image Url: {{frecord.document}}</p> -->
+        Image Url: {{frecord.document}}<br>
         <p>PDF unique ID: <b>frecords.{{forloop.revcounter0}}.document.url</b></p>
 
         {% empty %}
